src/styles/scss/_controls.scss
@use './mixins';
@use './media-queries';

.controls {
  align-self: flex-end;
  justify-self: flex-start;
  grid-area: controls;

  display: grid;
  grid-template-columns: 1fr 40px auto;
  grid-template-rows: repeat(3, 40px);
  grid-gap: 0.5rem;

  > * {
    @include mixins.shadow();
    cursor: pointer;
    width: max-content;
  }

  label {
    display: none;
    justify-self: flex-end;
    padding: 0.35rem;
    grid-column: 1;

    input {
      --webkit-appearance: none;
      border: none;
      cursor: inherit;
      height: 24px;
      margin-left: 0.35rem;
      padding: 0;
      width: 24px;
      vertical-align: bottom;
    }
  }

  button {
    color: var(--text);
    background-color: white;
    border: var(--border);
    font-size: inherit;
    font-family: inherit;
    padding: 0.35rem 0.55rem;
    grid-column: 3;
  }

  .background {
    box-sizing: border-box;
    grid-column: 2;
    padding: 0.35rem;

    &--dotted {
      grid-row: 1;
    }

    &--striped {
      grid-row: 2;
    }

    &--none {
      grid-row: 3;
    }

    button {
      height: 24px;
      width: 24px;
      vertical-align: middle;
    }
  }

  #dotted {
    background-image: var(--dotted);
    background-size: 4px 4px;
  }

  #striped {
    background-image: var(--striped);
    background-position-x: 9px;
    background-size: 4px;
  }

  #none {
    background-image: none;
  }

  #highlight,
  #outline,
  #text {
    background-color: transparent;
  }

  #highlight,
  #grayscale { grid-row: 1 }

  #outline,
  #random { grid-row: 2 }

  #text,
  #reset { grid-row: 3 }

  @include media-queries.fromM() {
    justify-self: flex-end;

    label {
      display: block;
    }
  }
}

.no-js .controls {
  display: none !important;
}

